snapshot-tests/tests/snapshots/parser__bad_table_names__crlf_literal.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ crlf_literal:1:3
  │
1 │ ['
  │   ^ expected `'`
